--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,46 @@
-api==0.0.7
-astroid==2.0.4
-azure-cosmos==3.0.0
+apt-xapian-index==0.47
+asn1crypto==0.24.0
 certifi==2018.8.24
 chardet==3.0.4
-click==6.7
-colorama==0.3.9
+Click==7.0
+command-not-found==0.3
+cryptography==2.3
+cupshelpers==1.0
+distro-info==0.18
+entrypoints==0.2.3.post3
 Flask==1.0.2
-Flask-API==1.0
-idna==2.7
-isort==4.3.4
-itsdangerous==0.24
+galternatives==1.0.1
+httplib2==0.11.3
+idna==2.6
+itsdangerous==1.1.0
 Jinja2==2.10
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
-mccabe==0.6.1
-nose==1.3.7
-pydocumentdb==2.3.3
-pylint==2.1.1
-pyodbc==4.0.24
-requests==2.19.1
+keyring==15.1.0
+keyrings.alt==3.1
+language-selector==0.1
+MarkupSafe==1.1.1
+netifaces==0.10.4
+olefile==0.46
+pexpect==4.6.0
+Pillow==5.2.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+PyGObject==3.30.1
+pyodbc==4.0.26
+python-apt==1.7.0
+python-debian==0.1.33
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.5.6
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
 six==1.11.0
-urllib3==1.23
-Werkzeug==0.14.1
-wrapt==1.10.11
+systemd-python==234
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+Werkzeug==0.15.1
+xkit==0.0.0
